// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatCard (snapshot) > mantiene el marcado con ícono decorativo 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="p-6 flex flex-row items-center justify-between gap-2 pb-2"
    >
      <div
        class="tracking-tight text-sm font-medium text-muted-foreground"
      >
        Total facturas
      </div>
      <svg
        aria-hidden="true"
        class="lucide lucide-wallet size-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 7V4a1 1 0 0 0-1-1H5a2 2 0 0 0 0 4h15a1 1 0 0 1 1 1v4h-3a2 2 0 0 0 0 4h3a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1"
        />
        <path
          d="M3 5v14a2 2 0 0 0 2 2h15a1 1 0 0 0 1-1v-4"
        />
      </svg>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p
        class="text-3xl font-bold tabular-nums text-foreground"
      >
        128
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatCard (snapshot) > mantiene el marcado sin ícono 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="p-6 flex flex-row items-center justify-between gap-2 pb-2"
    >
      <div
        class="tracking-tight text-sm font-medium text-muted-foreground"
      >
        Total facturas
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p
        class="text-3xl font-bold tabular-nums text-foreground"
      >
        128
      </p>
    </div>
  </div>
</DocumentFragment>
`;
